fixing mount config

--- a/.platform/.platform.app.yaml
+++ b/.platform/.platform.app.yaml
@@ -3,6 +3,7 @@ type: 'php:8.1'
 mounts:
     "/var": { source: local, source_path: var }
     "/public/uploads": { source: local, source_path: uploads }
+    service: files
 relationships:
     database: "database:postgresql"
 runtime:
