--- a/.platform/.platform.app.yaml
+++ b/.platform/.platform.app.yaml
@@ -1,5 +1,8 @@
 name: guestbook
 type: 'php:8.1'
+mounts:
+    "/var": { source: local, source_path: var, service: files }
+    "/public/uploads": { source: local, source_path: uploads, service: files  }
 relationships:
     database: "database:postgresql"
 runtime:
