--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -41,6 +41,7 @@
     </listeners>
     <extensions>
         <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+        <extension class="Symfony\Component\Panther\ServerExtension" />
     </extensions>
     <!-- Run `composer require symfony/panther` before enabling this extension -->
     <!--
